'a lot of fixes, live testing rn'

--- a/neurips-t4x2-complete-solution-fixed.ipynb
+++ b/neurips-t4x2-complete-solution-fixed.ipynb
@@ -122,8 +122,8 @@
     "from rdkit.Chem import Descriptors\n",
     "from tqdm import tqdm\n",
     "\n",
-    "# Set up multi-GPU\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "# Set up multi-GPU - use cuda:0 as primary device\n",
+    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
     "print(f\"Device: {device}\")\n",
     "if torch.cuda.is_available():\n",
     "    print(f\"GPUs available: {torch.cuda.device_count()}\")\n",
@@ -257,7 +257,11 @@
     "        )\n",
     "    \n",
     "    def forward(self, data):\n",
-    "        x, edge_index, batch = data.x, data.edge_index, data.batch\n",
+    "        # Ensure all tensors are on the same device as model parameters\n",
+    "        device = next(self.parameters()).device\n",
+    "        x = data.x.to(device)\n",
+    "        edge_index = data.edge_index.to(device)\n",
+    "        batch = data.batch.to(device)\n",
     "        \n",
     "        # Encode atoms\n",
     "        x = self.atom_encoder(x)\n",
@@ -349,12 +353,29 @@
     "    \n",
     "    # Create batch using PyTorch Geometric's Batch.from_data_list\n",
     "    try:\n",
-    "        return Batch.from_data_list(valid_batch)\n",
+    "        # First create the batch for graph structure\n",
+    "        batch_data = Batch.from_data_list(valid_batch)\n",
+    "        \n",
+    "        # Handle y and mask as graph-level attributes manually\n",
+    "        if hasattr(valid_batch[0], 'y') and valid_batch[0].y is not None:\n",
+    "            y_list = [item.y for item in valid_batch if hasattr(item, 'y') and item.y is not None]\n",
+    "            if y_list:\n",
+    "                batch_data.y = torch.stack(y_list, dim=0)  # Shape: (batch_size, num_properties)\n",
+    "        \n",
+    "        if hasattr(valid_batch[0], 'mask') and valid_batch[0].mask is not None:\n",
+    "            mask_list = [item.mask for item in valid_batch if hasattr(item, 'mask') and item.mask is not None]\n",
+    "            if mask_list:\n",
+    "                batch_data.mask = torch.stack(mask_list, dim=0)  # Shape: (batch_size, num_properties)\n",
+    "        \n",
+    "        return batch_data\n",
+    "        \n",
     "    except Exception as e:\n",
     "        print(f'Error in collate_batch: {e}')\n",
     "        # Return a dummy batch as fallback\n",
     "        dummy_data = Data(x=torch.zeros((1, 32)), edge_index=torch.empty((2, 0), dtype=torch.long))\n",
-    "        return Batch.from_data_list([dummy_data])\n",
+    "        dummy_data.y = torch.zeros((1, 5))\n",
+    "        dummy_data.mask = torch.zeros((1, 5))\n",
+    "        return dummy_data\n",
     "\n",
     "print(\"✅ Dataset class defined\")"
    ]
@@ -368,9 +389,19 @@
     "# Training functions\n",
     "def weighted_mae_loss(predictions, targets, masks):\n",
     "    \"\"\"Calculate weighted MAE loss.\"\"\"\n",
-    "    weights = torch.tensor([1.0, 1.0, 1.0, 1.0, 1.0], device=predictions.device)\n",
+    "    weights = torch.tensor([1.0, 1.0, 1.0, 1.0, 1.0], device=predictions.device, dtype=predictions.dtype)\n",
+    "    \n",
+    "    # Ensure proper broadcasting\n",
+    "    if len(weights.shape) == 1 and len(predictions.shape) == 2:\n",
+    "        weights = weights.unsqueeze(0)  # Shape: (1, 5) for broadcasting\n",
+    "    \n",
     "    mae_per_property = torch.abs(predictions - targets) * masks\n",
-    "    weighted_mae = (mae_per_property * weights.unsqueeze(0)).sum() / (masks * weights.unsqueeze(0)).sum()\n",
+    "    weighted_mae = (mae_per_property * weights).sum() / (masks * weights).sum()\n",
+    "    \n",
+    "    # Avoid division by zero\n",
+    "    if torch.isnan(weighted_mae) or torch.isinf(weighted_mae):\n",
+    "        return torch.tensor(0.0, device=predictions.device, dtype=predictions.dtype)\n",
+    "    \n",
     "    return weighted_mae\n",
     "\n",
     "def train_epoch(model, train_loader, optimizer, device):\n",
@@ -382,22 +413,30 @@
     "        if batch is None or not hasattr(batch, 'x'):\n",
     "            continue\n",
     "        \n",
+    "        # Move batch to primary device (cuda:0)\n",
     "        batch = batch.to(device)\n",
     "        optimizer.zero_grad()\n",
     "        \n",
-    "        if USE_MIXED_PRECISION:\n",
-    "            with autocast():\n",
+    "        try:\n",
+    "            if USE_MIXED_PRECISION:\n",
+    "                with autocast():\n",
+    "                    predictions = model(batch)\n",
+    "                    loss = weighted_mae_loss(predictions, batch.y, batch.mask)\n",
+    "                \n",
+    "                scaler.scale(loss).backward()\n",
+    "                scaler.step(optimizer)\n",
+    "                scaler.update()\n",
+    "            else:\n",
     "                predictions = model(batch)\n",
     "                loss = weighted_mae_loss(predictions, batch.y, batch.mask)\n",
-    "            \n",
-    "            scaler.scale(loss).backward()\n",
-    "            scaler.step(optimizer)\n",
-    "            scaler.update()\n",
-    "        else:\n",
-    "            predictions = model(batch)\n",
-    "            loss = weighted_mae_loss(predictions, batch.y, batch.mask)\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
+    "                loss.backward()\n",
+    "                optimizer.step()\n",
+    "        except RuntimeError as e:\n",
+    "            if \"Expected all tensors to be on the same device\" in str(e):\n",
+    "                print(f\"Device error: {e}\")\n",
+    "                print(f\"Batch device: {batch.x.device if hasattr(batch, 'x') else 'N/A'}\")\n",
+    "                print(f\"Model device: {next(model.parameters()).device}\")\n",
+    "            raise e\n",
     "        \n",
     "        total_loss += loss.item()\n",
     "        num_batches += 1\n",
@@ -414,15 +453,23 @@
     "            if batch is None or not hasattr(batch, 'x'):\n",
     "                continue\n",
     "            \n",
+    "            # Move batch to primary device (cuda:0)\n",
     "            batch = batch.to(device)\n",
     "            \n",
-    "            if USE_MIXED_PRECISION:\n",
-    "                with autocast():\n",
+    "            try:\n",
+    "                if USE_MIXED_PRECISION:\n",
+    "                    with autocast():\n",
+    "                        predictions = model(batch)\n",
+    "                        loss = weighted_mae_loss(predictions, batch.y, batch.mask)\n",
+    "                else:\n",
     "                    predictions = model(batch)\n",
     "                    loss = weighted_mae_loss(predictions, batch.y, batch.mask)\n",
-    "            else:\n",
-    "                predictions = model(batch)\n",
-    "                loss = weighted_mae_loss(predictions, batch.y, batch.mask)\n",
+    "            except RuntimeError as e:\n",
+    "                if \"Expected all tensors to be on the same device\" in str(e):\n",
+    "                    print(f\"Evaluation device error: {e}\")\n",
+    "                    print(f\"Batch device: {batch.x.device if hasattr(batch, 'x') else 'N/A'}\")\n",
+    "                    print(f\"Model device: {next(model.parameters()).device}\")\n",
+    "                raise e\n",
     "            \n",
     "            total_loss += loss.item()\n",
     "            num_batches += 1\n",
@@ -483,12 +530,13 @@
     "    dropout=0.1\n",
     ")\n",
     "\n",
-    "# Multi-GPU setup\n",
+    "# Move model to primary device FIRST\n",
+    "model = model.to(device)\n",
+    "\n",
+    "# Multi-GPU setup AFTER moving to device\n",
     "if torch.cuda.device_count() > 1:\n",
     "    print(f\"Using {torch.cuda.device_count()} GPUs\")\n",
     "    model = nn.DataParallel(model)\n",
-    "\n",
-    "model = model.to(device)\n",
     "\n",
     "# Optimizer and scheduler\n",
     "optimizer = optim.AdamW(model.parameters(), lr=0.001, weight_decay=1e-5)\n",
